# lunatic-python

./: .gitignore  CMakeLists.txt  README.md  init.lua  install.sh  lpython-scm-1.rockspec  settings.py-template  setup.py  test.py  test_net.py
cmake/: FindNumpy.cmake
fblualib-include/: LuaToPython.h  LuaUtils.h  Utils.h
fblualib-src/: LuaToPython.cpp  LuaUtils.cpp  Ref.cpp
include/: pythoninlua.h
src/: AllocatorForArray.c  AllocatorForArray.h  THGenerateAllTypes.h  luainpython.c  luainpython.cpp  luainpython.h  pythoninlua.c  pythoninlua.cpp  pythoninlua.h
src/generic/: arrayToTensor.c  deallocStorage.c  tensorToArray.c
test/: arrayToTensorTest.py  tensorToArrayTest.py  test.lua
